--- a/src/index.html
+++ b/src/index.html
@@ -7,6 +7,7 @@
 
   <meta content="width=device-width, initial-scale=1" name="viewport">
   <link href="favicon.ico" rel="icon" type="image/x-icon">
+  <script src="https://maps.googleapis.com/maps/api/js?key=<Your API KEY>&libraries=places&language=en"></script>
 </head>
 <body dir="ltr">
 <style>
